# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: build.py  database_connection.py  index.py  initialize_database.py  pyproject.toml
src/entities/: user.py
src/game_files/: clock.py  event_queue.py  game.py  game_loop.py  game_start.py  load_image.py  renderer.py
src/game_files/sprites/: highlight.py  hit.py  miss.py  sea.py  ship.py  shipwreck.py
src/gamefiles/: game.py  game_loop.py  renderer.py
src/gamefiles/sprites/: highlight.py  hit.py  miss.py  sea.py  ship.py  shipwreck.py
src/repositories/: user_repository.py
src/services/: game_service.py
src/tests/: game_loop_test.py  game_service_test.py  game_test.py  repository_test.py
src/ui/: create_user_view.py  game_view.py  login_view.py  ui.py
