[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaana Haussalo",email = "145219384+jaahauss@users.noreply.github.com."}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "invoke (>=2.2.0,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-dotenv = "^0.5.2"
coverage = "^7.8.0"

